# cslbot

./: .codeclimate.yml  .coveragerc  .gitignore  .gitmodules  .pylintrc  .style.yapf  .travis.yml  MANIFEST.in  Pipfile  README.md  README.rst  admins  android.sh  bot.py  client.py  config.example  config.py  control.py  deploy  excuses  fix_tweepy.sh  fixperms.sh  gendocs.sh  generatelog.py  generatelogs.py  groups  handler.py  hook.py  import_polls.py  import_quotes.py  import_scores.py  import_weather.py  ircbot  log.sh  main.py  parsedata.py  parselogs.py  parsequotes.py  project.config  pyproject.toml  (+10 more)
.github/workflows/: codeql-analysis.yml
CslBot.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  entry_points.txt  requires.txt  top_level.txt
alembic/: env.py
alembic/versions/: 3614b38ddf9_kick_logging_change.py  ef7ccebeff_initial_commit.py
commands/: 8ball.py  __init__.py  about.py  abuse.py  acronym.py  addquote.py  admins.py  ahamilto.py  ahamilton.py  award.py  babble.py  babble2.py  badble.py  bard.py  bc.py  bike.py  bingo.py  blame.py  bofh.py  bold.py  botsnack.py  botspam.py  cadmin.py  cancel.py  channels.py  choose.py  cidr.py  clippy.py  coin.py  compare.py  creffett.py  cve.py  ddate.py  defersay.py  define.py  deletequote.py  demorse.py  dialup.py  distro.py  dvorak.py  (+114 more)
commands/core/: acronym.py  admins.py  babble.py  blame.py  botsnack.py  channels.py  cidr.py  coin.py  ddate.py  demorse.py  distro.py  dvorak.py  fml.py  gcc.py  google.py  guarded.py  help.py  highlight.py  imdb.py  inspect.py  ipa.py  kill.py  microwave.py  mission.py  morse.py  nicks.py  nuke.py  ping.py  random.py  score.py  shibe.py  signal.py  slap.py  throw.py  weather.py  wikipath.py  wolf.py  word.py  yoda.py
commands/tjhsst/: ahamilto.py  laudiacay.py  skasturi.py
cslbot/alembic/: env.py  script.py.mako
cslbot/commands/: 8ball.py  about.py  abuse.py  acl.py  acronym.py  active.py  admins.py  babble.py  bard.py  bc.py  bike.py  blame.py  botsnack.py  botspam.py  cadmin.py  cancel.py  celebrate.py  channels.py  choose.py  cidr.py  coin.py  cve.py  dc.py  ddate.py  defersay.py  define.py  demorse.py  distro.py  dvorak.py  ebay.py  eix.py  errno.py  filter.py  fml.py  fortune.py  fullwidth.py  fweather.py  gcc.py  gizoogle.py  google.py  (+81 more)
cslbot/helpers/: __init__.py  acl.py  admin.py  arguments.py  babble.py  babble.pyi  backtrace.py  backtrace.pyi  command.py  config.py  control.py  control.pyi  core.py  core.pyi  exception.py  geoip.py  handler.py  handler.pyi  hook.py  identity.py  misc.py  modutils.py  orm.py  orm.pyi  reddit.py  registry.py  registry.pyi  reloader.py  server.py  server.pyi  sql.py  textutils.py  tokens.py  twitter.py  urlutils.py  web.py  workers.py
cslbot/hooks/: __init__.py  autodeop.py  babble.py  band.py  bee.py  bob.py  butt.py  caps.py  ctf.py  make.py  note.py  reddit.py  scores.py  shrek.py  stallman.py  understanding.py  url.py  voice.py  xkcd.py
cslbot/scripts/: gen_babble.py  migrate.py  parsedata.py  parselogs.py  reload.py
cslbot/static/: allstar.txt  config.example  groups.example  shakespeare-dictionary.json  urban-names.json
cslbot/templates/: base.html  polls.html  quotes.html  scores.html
data/: steamids.pickle
doc/: bot.rst  commands.rst  commands.tjhsst.rst  conf.py  config.rst  control.rst  cslbot.commands.rst  cslbot.commands.tjhsst.rst  cslbot.helpers.rst  cslbot.hooks.rst  cslbot.rst  cslbot.scripts.rst  cslbot.static.rst  cslbot.tjhsst.rst  generatelog.rst  generatelogs.rst  handler.rst  helpers.rst  hook.rst  hooks.rst  import_quotes.rst  index.rst  modules.rst  parsedata.rst  parselogs.rst  parsequotes.rst  reload.rst  scripts.rst  server.rst  sql.rst
helpers/: .gitignore  __init__.py  admin.py  arguments.py  babble.py  babble.pyx  babble.pyxbld  backtrace.py  command.py  config.py  control.py  core.py  defer.py  exception.py  geoip.py  groups.cfg  groups.example  handler.py  hook.py  identity.py  misc.py  modutils.py  orm.py  reddit.py  reloader.py  server.py  sql.py  textutils.py  thread.py  traceback.py  urlutils.py  workers.py
hooks/: __init__.py  admin.py  autodeop.py  babble.py  band.py  bob.py  butt.py  caps.py  clippy.py  ctf.py  hyphen.py  note.py  reddit.py  scores.py  stallman.py  understanding.py  url.py  xkcd.py
htmlgen/: parsequotes.py  quotes.py
htmlgen/templates/: base.html
modules/: hook.py  server.py
scripts/: build_docs.sh  client.py  deploy_docs.sh  entropy.py  format.sh  fuzz.py  fuzz.sh  gen_babble.py  gendocs.sh  ircbot  migrate.py  mypy.sh  parsedata.py  parselogs.py  partest.sh  reload  reload.py  stats.sh  test.py
static/: groups.example  quotes.template  slogans.txt  wordlist  words
static/templates/: base.html  polls.html  quotes.html  scores.html  urls.html
test/: bot_test.py  cslbot_test.py  test.py
(+128 files in other folders)
