[tool.poetry]
name = "CslBot"
version = "0.21"
license = "GPL-2.0-or-later"
readme = "README.rst"
description = "An easily extensible, modular irc bot."
repository = "https://github.com/tjcsl/cslbot"
authors = ["The TJHSST Computer Systems Lab <cslbot@pefoley.com>"]
keywords = ["csl", "tjhsst", "tj", "irc", "bot"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Communications :: Chat :: Internet Relay Chat",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
irc = "^20.3.1"
SQLAlchemy = "^2.0.27"
alembic = "^1.13.1"
python-dateutil = "^2.9.0.post0"
requests = "^2.31.0"
requests-oauthlib = ">=1.3.1,<3.0.0"
lxml = ">=4.9.3,<6.0.0"
geoip2 = "^4.8.0"
TwitterSearch = "^1.0.2"
python-twitter = "^3.5"
psycopg2 = "^2.9.9"
absl-py = ">=1.4,<3.0"
cslbot-tjhsst = {git = "https://github.com/tjcsl/cslbot-tjhsst"}

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"
yapf = "^0.40.2"
isort = "^5.13.2"
Sphinx = "^7.2.6"
pytest = ">=7.4.3,<9.0.0"
poetry = "^1.8.1"
pytype = "^2024.2.27"

[tool.poetry.scripts]
cslbot = "cslbot.helpers.core:init"
cslbot-parselogs = "cslbot.scripts.parselogs:main"
cslbot-parsedata = "cslbot.scripts.parsedata:main"
cslbot-genbabble = "cslbot.scripts.gen_babble:main"
cslbot-reload = "cslbot.scripts.reload:main"
cslbot-migrate = "cslbot.scripts.migrate:main"


[tool.pytype]
inputs = ['cslbot']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
