[tool.poetry]
name = "CslBot"
version = "0.21"
license = "GPL-2.0-or-later"
readme = "README.rst"
description = "An easily extensible, modular irc bot."
repository = "https://github.com/tjcsl/cslbot"
authors = ["The TJHSST Computer Systems Lab <cslbot@pefoley.com>"]
keywords = ["csl", "tjhsst", "tj", "irc", "bot"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Communications :: Chat :: Internet Relay Chat",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
irc = "^20.5.0"
SQLAlchemy = "^2.0.43"
alembic = "^1.16.4"
python-dateutil = "^2.9.0.post0"
requests = "^2.32.5"
requests-oauthlib = ">=1.3.1,<3.0.0"
lxml = ">=4.9.3,<6.0.0"
geoip2 = ">=4.8.1,<6.0.0"
TwitterSearch = "^1.0.2"
python-twitter = "^3.5"
psycopg2 = "^2.9.10"
absl-py = ">=1.4,<3.0"
cslbot-tjhsst = {git = "https://github.com/tjcsl/cslbot-tjhsst"}

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
yapf = "^0.43.0"
isort = ">=5.13.2,<7.0.0"
Sphinx = "^8.2.3"
pytest = ">=7.4.3,<9.0.0"
poetry = "^2.1.4"
pytype = "^2024.10.11"

[tool.poetry.scripts]
cslbot = "cslbot.helpers.core:init"
cslbot-parselogs = "cslbot.scripts.parselogs:main"
cslbot-parsedata = "cslbot.scripts.parsedata:main"
cslbot-genbabble = "cslbot.scripts.gen_babble:main"
cslbot-reload = "cslbot.scripts.reload:main"
cslbot-migrate = "cslbot.scripts.migrate:main"


[tool.pytype]
inputs = ['cslbot']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
